<resources>
    <string name="app_name" translatable="false">Foodonet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sign_in">sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="add_publication">New Share</string>
    <string name="ago">ago</string>

    <string name="post_hint_what_would_you_like_to_share">What would you like to share?</string>
    <string name="post_hint_pickup_address">Pickup address</string>
    <string name="post_hint_share_with">Share with:</string>
    <string name="post_hint_additional_details">Additional details(optional)</string>
    <string name="post_please_enter_all_fields">Please enter all fields</string>
    <string name="post_hint_choose_date_to_end">Choose date to end</string>
    <string name="post_hint_price">Price</string>
    <string name="post_toast_please_enter_a_price_in_numbers">Please enter a price in numbers</string>

    <string name="title_activity_map">Map</string>
    <string name="item_price">Item price:</string>
    <string name="audience_public">Public</string>
    <string name="group">Group</string>
    <string name="joined">Joined</string>
    <string name="free">Free</string>
    <string name="map">Map</string>

    <string name="km">km</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>

    <string name="drawer_my_shares">My Shares</string>
    <string name="drawer_all_events">All Events</string>
    <string name="drawer_map_view">Map View</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_groups">Groups</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_about">About</string>

    <string name="report_has_more_to_offer">has more to offer</string>
    <string name="report_took_all">took all</string>
    <string name="report_found_nothing_there">found nothing there</string>
    <string name="dialog_please_choose_report">Please choose report</string>

    <string name="signed_out_successfully">Signed out successfully</string>
    <string name="toast_needs_location_permission">needs location permission</string>
    <string name="updating">Updating</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="report_added">Report added</string>
    <string name="search_title">Search</string>
    <string name="rotate_the_phone">Rotate the phone</string>
    <string name="send">Send</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <string name="about_us_info">Foodonet is a social initiative aiming to reduce food waste.\nFoodonet develops a mobile platform that allows people to easily donate spare food to one another.\nFoodonet is connecting food producers directly to customers with no mediators and cutting food costs</string>
    <string name="prefs_profile_settings">Profile Settings</string>
    <string name="prefs_notifications">Notifications</string>
    <string name="add_image">Add image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="feedback_share_your_thoughts_or_anything_else">Share your thoughts or anything else</string>
    <string name="admin">Admin</string>
    <string name="group_name">Group name</string>
    <string name="group_members">Group members</string>
    <string name="dialog_new_group">New Group</string>
    <string name="please_wait">Please wait</string>
    <string name="active_shares">Active Shares</string>
    <string name="new_share">New Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="users_joined">users joined</string>
    <string name="h_hours">h</string>
    <string name="min_minutes">min</string>
    <string name="day">day</string>
    <string name="price">Price:</string>
    <string name="you_dont_have_any_groups_yet">You don\'t have any groups yet</string>
    <string name="hi_what_would_you_like_to_share">Hi,\nWhat would you like\nto share?</string>

    <string name="pick_new_location">Pick new location</string>
    <string name="view_pager_tab_latest">Latest</string>
    <string name="view_pager_tab_recent">Recent</string>
    <string name="view_pager_tab_closest">Closest</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="dialog_please_report">Please Report</string>
    <string name="dialog_has_more_to_pickup">Has More to Pickup</string>
    <string name="dialog_i_took_all">I Took All</string>
    <string name="dialog_found_nothing_there">Found Nothing There</string>
    <string name="dialog_please_rate">Please Rate</string>
    <string name="not_rated">Not rated</string>
    <string name="deleted">Deleted</string>
    <string name="you_can_only_report_once">You can only report once</string>
    <string name="unregister">Unregister</string>
    <string name="start_sharing_by_adding_an_image_of_the_food_you_wish_to_share">Start sharing by adding\n an image of the food\n you wish to share</string>
    <string name="sms_to_publisher_part1">Hi, about your event in Foodonet:\n</string>
    <string name="sms_to_publisher_part2">, can I come and pick it up?\nthanks,\n</string>

    <string name="sms_to_registered_user_part1">Hi, about my event in Foodonet:\n</string>
    <string name="sms_to_registered_user_part2">, when would you like to pick it up?\nthanks,\n </string>

    <string name="welcome_to_foodonet">Welcome to Foodonet</string>
    <string name="last_step">Last step</string>
    <string name="phone">Phone</string>
    <string name="start_sharing">Start sharing</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="unregistered">Unregistered</string>
    <string name="dialog_select_contact">Select contact</string>
    <string name="ok">OK</string>
    <string name="prefs_user_name">User Name</string>
    <string name="prefs_phone_number">Phone Number</string>
    <string name="prefs_get_notifications">Get Notifications</string>
    <string name="prefs_notification_radius">Notification Radius</string>
    <string name="prefs_10km">10km</string>
    <string name="prefs_20km">20km</string>
    <string name="prefs_30km">30km</string>
    <string name="prefs_50km">50km</string>
    <string name="prefs_all">All</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="toast_user_already_in_group">User already in group</string>
    <string name="dialog_are_you_sure">Are you sure?</string>
    <string name="toast_there_are_no_registered_users">There are no registered users</string>
    <string name="dialog_please_wait">Please wait</string>
    <string name="menu_exit_group">Exit group</string>
    <string name="got_a_new_report">got a new report</string>
    <string name="notifications">Notifications</string>
    <string name="event_no_longer_online">Event no longer online</string>
    <string name="new_messages">new messages</string>
    <string name="new_message">new message</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="locations">Locations</string>
    <string name="ended">Ended</string>
    <string name="remaining">remaining</string>
    <string name="currency_nis">₪</string>
    <string name="republish">Republish</string>
    <string name="stop_event">Stop event</string>
    <string name="ready_to_get_started">Ready to get started?</string>

    <string name="log_failed_to_pick_contact" translatable="false">Failed to pick contact</string>
    <string name="user_name_too_long">User name too long</string>
    <string name="cannot_publish_closed_group_event">Cannot publish closed group event</string>
    <string name="twitter_app_isnt_found">Twitter app isn\'t found</string>
    <string name="foodonet">Foodonet</string>
    <string name="location_disabled">Location disabled</string>
    <string name="google_play_services_is_not_available" translatable="false">Google Play Services is not available.</string>
    <string name="toast_something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="toast_please_enter_your_name">Please enter your name</string>
    <string name="toast_please_enter_a_group_name">Please enter a group name</string>
    <string name="image_desc_my_location">My location</string>
    <string name="image_desc_publication_image">Publication image</string>
    <string name="image_desc_add_image">Add image</string>
    <string name="image_desc_star">Star</string>
    <string name="button_desc_report">Report</string>
    <string name="button_desc_sms_publisher">SMS publisher</string>
    <string name="button_desc_phone_publisher">Phone publisher</string>
    <string name="button_desc_navigate">Navigate</string>
    <string name="button_desc_share_on_facebook">Share on Facebook</string>
    <string name="button_desc_share_on_twitter">Share on Twitter</string>
    <string name="button_desc_sms_registered_users">SMS registered users</string>
    <string name="button_desc_phone_registered_users">Phone registered users</string>
    <string name="button_desc_remove_user">Remove user</string>
    <string name="toast_you_must_agree_with_the_terms_and_conditions">You must agree with the Terms and Conditions</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
</resources>
