<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.roa.foodonetv3.activities.AboutUsActivity">

    <ImageView
        app:srcCompat="@mipmap/icon_foodonet"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageFoodonetIcon"
        android:layout_width="@dimen/image_size_height_120"
        android:layout_height="@dimen/image_size_height_120"
        android:contentDescription="@string/foodonet" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageFoodonetIcon"
        android:layout_marginTop="@dimen/margin_24"
        style="@style/FooBlackXL"
        android:id="@+id/foodonet" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/foodonet"
        android:layout_toEndOf="@+id/imageFoodonetIcon"
        android:id="@+id/textAppVersion"
        style="@style/FooXS"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageFoodonetIcon"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/about_us_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FooMediumPlus"
                android:id="@+id/textAboutUs" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
