<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/detailTopPanelLayout"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/image_size_16"
                android:layout_height="@dimen/image_size_16"
                android:id="@+id/imagePublicationGroup"
                android:src="@drawable/public_blue"
                android:layout_margin="@dimen/margin_4"
                android:layout_centerVertical="true"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textCategory"
                android:layout_centerVertical="true"
                android:maxLines="2"
                android:layout_toEndOf="@id/imagePublicationGroup"
                style="@style/FooXS"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/image_size_16"
                android:layout_height="@dimen/image_size_16"
                android:id="@+id/imagePublicationRemaining"
                android:src="@drawable/clock"
                android:layout_margin="@dimen/margin_4"
                android:layout_centerVertical="true"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textTimeRemaining"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imagePublicationRemaining"
                style="@style/FooSmall"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="@dimen/image_size_16"
                android:layout_height="@dimen/image_size_16"
                android:id="@+id/imagePublicationJoined"
                android:src="@drawable/user"
                android:layout_margin="@dimen/margin_4"
                android:layout_centerVertical="true"
                android:contentDescription="@null" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textJoined"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imagePublicationJoined"
                style="@style/FooXS"
                />
        </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/divider"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@id/detailTopPanelLayout"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_size_height_180"
        app:srcCompat="@drawable/icon_alpha"
        android:id="@+id/imagePicturePublication"
        android:layout_below="@+id/divider"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_desc_publication_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagePicturePublication"
        android:layout_alignParentStart="true"
        android:id="@+id/textTitlePublication"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        style="@style/FooBlackBoldMedium"
        android:layout_marginTop="@dimen/margin_8" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/image_size_48"
        android:layout_height="@dimen/image_size_48"
        android:src="@drawable/icon_alpha"
        android:id="@+id/imagePublisherUser"
        android:layout_below="@id/textTitlePublication"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitlePublication"
        android:layout_toEndOf="@+id/imagePublisherUser"
        android:id="@+id/textPublicationAddress"
        style="@style/FooBlackSmall"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8" />

    <ImageView
        android:layout_width="@dimen/image_size_24"
        android:layout_height="@dimen/image_size_24"
        app:srcCompat="@drawable/star"
        android:layout_below="@+id/textPublicationAddress"
        android:layout_toEndOf="@+id/imagePublisherUser"
        android:id="@+id/imageStar"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:contentDescription="@string/image_desc_star" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPublicationAddress"
        android:layout_toEndOf="@+id/imageStar"
        android:id="@+id/textPublicationRating"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        style="@style/FooSmall"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPublicationAddress"
        android:layout_toEndOf="@+id/textPublicationRating"
        android:id="@+id/textPublisherName"
        android:maxLines="1"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        style="@style/FooSmall"
        />

    <TextView
        android:text="@string/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageStar"
        android:layout_alignParentStart="true"
        android:id="@+id/textGroupName"
        style="@style/FooBlackSmall"
        android:layout_marginStart="@dimen/margin_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textGroupName"
        android:layout_toEndOf="@+id/textGroupName"
        android:id="@+id/textPublicationPrice"
        style="@style/FooBlueIndentMedium"
        android:layout_marginStart="@dimen/margin_8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textPublicationPrice"
        android:layout_toEndOf="@id/textPublicationPrice"
        android:id="@+id/textPublicationPriceType"
        style="@style/FooYellowSmall"
        android:layout_marginStart="@dimen/margin_4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPublicationDetails"
        android:gravity="start"
        android:textAlignment="viewStart"
        android:layout_below="@+id/textGroupName"
        android:layout_alignStart="@+id/textGroupName"
        style="@style/FooXS"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textPublicationDetails"
        android:layout_alignParentStart="true"
        android:id="@+id/recyclerPublicationReport"/>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:id="@+id/layoutRegisteredDetails">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_report"
                android:id="@+id/imageActionPublicationReport"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_report" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_sms"
                android:id="@+id/imageActionPublicationSMS"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_sms_publisher" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_call"
                android:id="@+id/imageActionPublicationPhone"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_phone_publisher" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_navigate"
                android:id="@+id/imageActionPublicationMap"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_navigate" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:id="@+id/layoutAdminDetails"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_facebook"
                android:id="@+id/imageActionAdminShareFacebook"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_share_on_facebook" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_twitter"
                android:id="@+id/imageActionAdminShareTwitter"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_share_on_twitter" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_sms"
                android:id="@+id/imageActionAdminSMS"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_sms_registered_users" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:layout_width="@dimen/image_size_48"
                android:layout_height="@dimen/image_size_48"
                android:padding="@dimen/margin_12"
                android:src="@drawable/fab_call"
                android:id="@+id/imageActionAdminPhone"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/button_desc_phone_registered_users" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>